impl ACYCLIC_REF_COUNT pass huge ref_count (> 0x20_0000_0000) (23 + 2) bit requred for rootRefCount at minimum. sh exec_test.sh java/lang/invoke/LFCaching/LFSingleThreadCachingTest